Lab 3 - Completo (Falta Desafio)
Lab 3 - Completo (Falta Desafio)

--- a/3º Ano/Anual/Programação Visual (PV)/Labs/Lab 3/CineSetúbal/Views/Home/FilmeDoDia.cshtml
+++ b/3º Ano/Anual/Programação Visual (PV)/Labs/Lab 3/CineSetúbal/Views/Home/FilmeDoDia.cshtml
@@ -36,4 +36,6 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+<h4><a asp-controller="Home" asp-action="DescarregarBilhete" class="label label-success">Bilhete</a></h4>
+
 <h1>@ViewData["IndexFilme"]</h1>
