--- a/3º Ano/Anual/Programação Visual (PV)/Labs/Lab 3/CineSetúbal/Views/Shared/_Layout.cshtml
+++ b/3º Ano/Anual/Programação Visual (PV)/Labs/Lab 3/CineSetúbal/Views/Shared/_Layout.cshtml
@@ -28,6 +28,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="FilmeDoDia">Filme do Dia</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Filmes" asp-action="Cartazes">Cartazes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Filmes" asp-action="Estreia">Estreias</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact">Contactos</a>
                         </li>
                         <li class="nav-item">
